<resources>
    <string name="app_name">PFE</string>
    <string name="RDV">Rendez-Vous</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="demande_rdv">Demande de rendez-vous</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="inscrip_Utilisateur">Utilisateur</string>
    <string name="inscription_medecin">Médecin</string>
    <string name="question_medecin">Vous êtes médecin ?</string>
    <string name="recherche">Recherche</string>
    <string name="adresse_courriel">Adresse Courriel :</string>
    <string name="adresse_postale">Adresse Postale :</string>
    <string name="sexe">Sexe :</string>
    <string name="numero_de_t_l_phone">Numero De Téléphone :</string>
    <string name="commentaires">Commentaires :</string>
    <string name="ajouter_un_commentaire">Ajouter un commentaire</string>
    <string name="demander_un_rendez_vous">Demander un rendez-vous</string>
    <string name="donner_une_note_au_m_decin">Donner une note au Médecin</string>
    <string name="photo_medecin">photo_medecin</string>
    <string name="recherche_avanc_e">Recherche Avancée</string>
    <string name="pas_de_medecin_dans_la_liste_des_favoris">Pas de medecin dans la liste des Favoris</string>
    <string name="pas_de_messages_dans_la_boite_de_reception">Pas de messages dans la boite de reception</string>
    <string name="pas_de_rendez_vous">Pas de rendez-vous</string>
    <string name="annuler">Annuler</string>
    <string name="confirmer">Confirmer</string>
    <string name="ajouter">Ajouter</string>
    <string name="pas_de_commentaires">Pas de Commentaires.</string>
    <string name="x">X</string>
    <string name="modifier_profil_usr">Modifier_Profil_Usr</string>
    <string name="supprimer_messages_profil_usr">Supprimer_Messages_Profil_Usr</string>
    <string name="supprimer_favoris_profil_usr">Supprimer_Favoris_Profil_Usr</string>
    <string name="supprimer">Supprimer</string>
    <string name="filtrer">Filtrer</string>
    <string name="modifier">Modifier</string>
    <string-array name="Sexe">
        <item>Homme</item>
        <item>Femme</item>
    </string-array>
    <string-array name="Sexe_Mdf">
        <item>- -</item>
        <item>Homme</item>
        <item>Femme</item>
    </string-array>
    <string-array name="Wilaya">
        <item>Adrar</item>
        <item>Chlef</item>
        <item>Laghouat</item>
        <item>Oum el-Bouaghi</item>
        <item>Batna</item>
        <item>Bejaia</item>
        <item>Biskra</item>
        <item>Bechar</item>
        <item>Blida</item>
        <item>Bouira</item>
        <item>Tamanghasset</item>
        <item>Tebessa</item>
        <item>Tlemcen</item>
        <item>Tiaret</item>
        <item>Tizi Ouzou</item>
        <item>Alger</item>
        <item>Djelfa</item>
        <item>Jijel</item>
        <item>Setif</item>
        <item>Saida</item>
        <item>Skikda</item>
        <item>Sidi Bel Abbes</item>
        <item>Annaba</item>
        <item>Guelma</item>
        <item>Constantine</item>
        <item>Médéa</item>
        <item>Mostaganem</item>
        <item>M\'Sila</item>
        <item>Mascara</item>
        <item>Ouargla</item>
        <item>Oran</item>
        <item>El Bayadh</item>
        <item>Illizi</item>
        <item>Bordj Bou Arreridj</item>
        <item>Boumerdes</item>
        <item>El Tarf</item>
        <item>Tindouf</item>
        <item>Tissemsilt</item>
        <item>El Oued</item>
        <item>Khenchela</item>
        <item>Souk Ahras</item>
        <item>Tipaza</item>
        <item>Mila</item>
        <item>Ain Defla</item>
        <item>Naama</item>
        <item>Ain Temouchent</item>
        <item>Ghardaia</item>
        <item>Relizane</item>

    </string-array>
    <string-array name="Spécialité">
        <item> Addictologue </item>
        <item> Allergologue </item>
        <item> Anatomiste </item>
        <item> Anesthesiste </item>
        <item> Biologiste medical </item>
        <item> Cancerologue </item>
        <item> Cardiologue </item>
        <item> Chirurgien </item>
        <item> Dentiste </item>
        <item> Dermatologue </item>
        <item> Endocrinologue </item>
        <item> Generaliste </item>
        <item> Geneticien </item>
        <item> Gynecologue </item>
        <item> Hematologue </item>
        <item> Hepato-gastro-enterologue </item>
        <item> Homeopathe </item>
        <item> Immunologiste </item>
        <item> Nephrelogue </item>
        <item> Neurologue </item>
        <item> Obstetricien </item>
        <item> Ophtalmologue </item>
        <item> Orthopediste </item>
        <item> Oto-rhino-laryngologiste </item>
        <item> Parasitologiste </item>
        <item> Pathologiste </item>
        <item> Pediatre </item>
        <item> Pneumologue </item>
        <item> Psychiatre </item>
        <item> Radiologue </item>
        <item> Rhumatologue </item>
        <item> Toxicologue </item>
        <item> Urologue </item>
        <item> Venerologue </item>
        <item> Veterinaire </item>
        <item> Virologue </item>

    </string-array>
    <string-array name="Wilaya_MdfMdc">
        <item>- -</item>
        <item>Adrar</item>
        <item>Chlef</item>
        <item>Laghouat</item>
        <item>Oum el-Bouaghi</item>
        <item>Batna</item>
        <item>Bejaia</item>
        <item>Biskra</item>
        <item>Bechar</item>
        <item>Blida</item>
        <item>Bouira</item>
        <item>Tamanghasset</item>
        <item>Tebessa</item>
        <item>Tlemcen</item>
        <item>Tiaret</item>
        <item>Tizi Ouzou</item>
        <item>Alger</item>
        <item>Djelfa</item>
        <item>Jijel</item>
        <item>Setif</item>
        <item>Saida</item>
        <item>Skikda</item>
        <item>Sidi Bel Abbes</item>
        <item>Annaba</item>
        <item>Guelma</item>
        <item>Constantine</item>
        <item>Médéa</item>
        <item>Mostaganem</item>
        <item>M\'Sila</item>
        <item>Mascara</item>
        <item>Ouargla</item>
        <item>Oran</item>
        <item>El Bayadh</item>
        <item>Illizi</item>
        <item>Bordj Bou Arreridj</item>
        <item>Boumerdes</item>
        <item>El Tarf</item>
        <item>Tindouf</item>
        <item>Tissemsilt</item>
        <item>El Oued</item>
        <item>Khenchela</item>
        <item>Souk Ahras</item>
        <item>Tipaza</item>
        <item>Mila</item>
        <item>Ain Defla</item>
        <item>Naama</item>
        <item>Ain Temouchent</item>
        <item>Ghardaia</item>
        <item>Relizane</item>

    </string-array>
    <string-array name="Spécialité_MdfMdc">
        <item>- -</item>
        <item> Addictologue </item>
        <item> Allergologue </item>
        <item> Anatomiste </item>
        <item> Anesthesiste </item>
        <item> Biologiste medical </item>
        <item> Cancerologue </item>
        <item> Cardiologue </item>
        <item> Chirurgien </item>
        <item> Dentiste </item>
        <item> Dermatologue </item>
        <item> Endocrinologue </item>
        <item> Generaliste </item>
        <item> Geneticien </item>
        <item> Gynecologue </item>
        <item> Hematologue </item>
        <item> Hepato-gastro-enterologue </item>
        <item> Homeopathe </item>
        <item> Immunologiste </item>
        <item> Nephrelogue </item>
        <item> Neurologue </item>
        <item> Obstetricien </item>
        <item> Ophtalmologue </item>
        <item> Orthopediste </item>
        <item> Oto-rhino-laryngologiste </item>
        <item> Parasitologiste </item>
        <item> Pathologiste </item>
        <item> Pediatre </item>
        <item> Pneumologue </item>
        <item> Psychiatre </item>
        <item> Radiologue </item>
        <item> Rhumatologue </item>
        <item> Toxicologue </item>
        <item> Urologue </item>
        <item> Venerologue </item>
        <item> Veterinaire </item>
        <item> Virologue </item>

    </string-array>
    <string-array name="Mois_Mdf">
        <item>- -</item>
        <item>Janvier</item>
        <item>Fevrier</item>
        <item>Mars</item>
        <item>Avril</item>
        <item>Mai</item>
        <item>Juin</item>
        <item>Juillet</item>
        <item>Aout</item>
        <item>Septembre</item>
        <item>Octobre</item>
        <item>Novembre</item>
        <item>Decembre</item>
    </string-array>
    <string-array name="Mois">
        <item>Janvier</item>
        <item>Fevrier</item>
        <item>Mars</item>
        <item>Avril</item>
        <item>Mai</item>
        <item>Juin</item>
        <item>Juillet</item>
        <item>Aout</item>
        <item>Septembre</item>
        <item>Octobre</item>
        <item>Novembre</item>
        <item>Decembre</item>
    </string-array>
    <string-array name="Jours_Mdf">
        <item>- -</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>


    </string-array>
    <string-array name="Jours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>


    </string-array>
</resources>