<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/darkgrey"
    android:padding="5dp"
    android:layout_gravity="center"
    android:elevation="4dp">

    <TextView
        android:id="@+id/Fermer_Demande_rdv"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/white"
        android:text="@string/x"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:background="@drawable/bg_cercle_tv"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Vous allez demander un rendez-vous pour une consultation, la date et l'heure de la consultation est définie par le médecin. "
        android:textSize="15sp"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="REMARQUE : Vous receverez un Message quand votre rendez-vous sera validé."
        android:gravity="center"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp">

        <Button
            android:id="@+id/Window_Demande_rdv_annuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annuler"
            android:background="@color/transparent"
            android:textColor="@color/gradStart"
            android:textSize="15sp"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/Window_Demande_rdv_Confirmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmer"
            android:background="@color/transparent"
            android:textColor="@color/gradStart"
            android:textSize="15sp"
            android:layout_gravity="end" />


    </LinearLayout>

</LinearLayout>