<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/darkgrey"
    android:elevation="4dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/Fermer_Ajouter_Commentaire"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/white"
        android:text="@string/x"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:background="@drawable/bg_cercle_tv"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="Ajouter un commentaire :"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/Window_Commentaire"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/rec"
        android:layout_marginTop="10dp"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:textCursorDrawable="@color/white"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:padding="10dp"
        android:scrollbars="vertical"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="REMARQUE : Le commentaire doit être validé par l'un de nos admins avant d'être publier."
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/Worning_commentaire_vide"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Vous n'avez saisi aucun message, veuillez réessayer."
        android:textSize="18sp"
        android:textColor="@color/gradStart"
        android:gravity="center"
        android:textStyle="bold"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp">

        <Button
            android:id="@+id/Window_Ajouter_commentaire_Annuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annuler"
            android:background="@color/transparent"
            android:textColor="@color/gradStart"
            android:textSize="15sp"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/Window_Ajouter_commentaire_Ajouter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ajouter"
            android:background="@color/transparent"
            android:textColor="@color/gradStart"
            android:textSize="15sp"
            android:layout_gravity="end" />


    </LinearLayout>

</LinearLayout>